tests/compiler/shorthandPropertyUndefined/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/shorthandPropertyUndefined.ts`, Apache-2.0 License

var a = { b };
//~^ ERROR: Cannot find name 'b'.